# HixleonOS

./: .gdbhistory  .gdbinit  .gitignore  CMakeLists.txt  HixleonOS.vdi  LICENSE  README.md  bochs.cfg  gdb.txt  makefile  package-grub-disk.sh  package-grub-img.sh  package-grub-iso.sh  package-grub-废案.sh  package-legacy.sh  package.sh
001/: mbr.asm  mbr2.asm  mbr3.asm
002/: mbr4.asm
003/: data.asm  mbr.asm  mbr2.asm
004/: LOADER.ASM  mbr0.asm
005/: LOADER  LOADER.ASM  mbr  mbr.asm
006/: LOADER  LOADER.ASM  linker.ld  makefile  mbr.asm
006/arch/x86/: GDT.cpp  boot.S
006/includes/Hixleon/: kernel.h
006/kernel/: kernel.cpp
006/kernel/tty/: tty.cpp  ttySetCursor.S
006/src/kernel/: kernel.cpp
HixleonOS/: KERNEL  linker.ld  makefile
HixleonOS/include/: kernel.h
HixleonOS/include/Hixleon/: kernel.h
HixleonOS/include/hhkInit/: hhkInit.h
HixleonOS/include/kernel/: ttyWH.h
HixleonOS/src/hhkInit/: boot.S  hhkInit.cpp
HixleonOS/src/kernel/: GDT.cpp  IDT.cpp  asmKernel.S  kernel.cpp
boot/grub/: grub.cfg  multiboot.h
boot/legacy/: LOADER  LOADER.ASM  mbr  mbr.asm
boot/x86/: LOADER  LOADER.ASM  mbr  mbr.asm
grub_version/: .gdbinit  gdb.txt  makefile
grub_version/kernel/: kernel.cpp
kernel/: .gdbinit  KERNEL  Kernel.symbol  linker.ld  makefile
kernel/class/: Map.hpp  SharedPtr.h  SharedPtr.hpp
kernel/include/: ACPI.h  APIC.h  IDT.h  cpu.h  crash.h  kernel.h  ld.h  page.h
kernel/src/: ACPI.cpp  APIC.cpp  GDT.cpp  IDT.cpp  asmIsr.S  asmKernel.S  boot.S  cpu.cpp  crash.cpp  hhkInit.cpp  kernel.cpp  tty.cpp
tmp/: KERNEL  LOADER
(+93 files in other folders)
